# postprocess_data

./: .gitignore  .nfs0000000000fdaf6c00000728  .readthedocs.yml  README.md  main.py  netcdf_reader.py  options_reader.py  pyproject.toml  requirements.txt
config/: DARE-UK.ini  LOCATE.ini  RECICLE-BGC-GFDL-ESM2G-run.ini
docs/: conf.py  index.rst  requirements.txt
docs/_source/: conf.py  config_file.md  index.rst  install.md  user.md
docs/_source/api/: modules.rst  postprocess_data.rst
docs/_source/config_file/: index.md  mapping.md  params.md  vars.md
postprocess_data/: main.py  netcdf_reader.py  netcdf_reader_nemo.py
postprocess_data/cli/: main.py
postprocess_data/options/: options_reader.py
postprocess_data/readers/: base_netcdf_reader.py  nemo_netcdf_reader.py
